Bug 377708 - KMail doesn't remember to render in HTML
Summary: KMail doesn't remember to render in HTML
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-03-17 01:57 UTC by Joel Koreth
Modified: 2018-10-31 06:56 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.9.3
Sentry Crash Report:


Attachments
Screenshot of the message preview and the standalone message window (179.37 KB, image/png)
2017-08-18 07:43 UTC, Florian
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Joel Koreth 2017-03-17 01:57:06 UTC
Even if in Security -> Reading -> 'Prefer HTML to plain text' is toggled. On next startup KMail will open messages in plain text mode.
Comment 1 Allen Winter 2017-03-28 20:18:22 UTC
It may be the same thing I am seeing.  If you don't have the "show HTML bar" option set then you won't see the HTML. 

configure->appearance->message window->show html bar must be set else I don't see the HTML version of the message.
Comment 2 Laurent Montel 2017-03-29 06:16:31 UTC
It works fine here.
What is you kmail version ?
Comment 3 Allen Winter 2017-03-29 12:21:03 UTC
version 5.4.3
Comment 4 Joel Koreth 2017-03-29 17:58:48 UTC
(In reply to Laurent Montel from comment #2)
> It works fine here.
> What is you kmail version ?

5.4.3 (Although this bug has been present for previous versions)
When you mean it works fine, have you toggled the Security -> Reading -> 'Prefer HTML to plain text', closed, relaunched kontact/kmail to find that it renders html messages without any additional work? Because in my case ill need to retoggle the Security -> Reading -> 'Prefer HTML to plain text' for Kmail to render an html message.
Comment 5 Joel Koreth 2017-03-29 17:59:26 UTC
(In reply to Allen Winter from comment #1)
> It may be the same thing I am seeing.  If you don't have the "show HTML bar"
> option set then you won't see the HTML. 
> 
> configure->appearance->message window->show html bar must be set else I
> don't see the HTML version of the message.

You mean the HTML Sidebar?
Comment 6 Florian 2017-08-18 07:41:48 UTC
Same here. I configured KMail2 to prefer HTML to plain text. This is what happens:

# Preconditions

- Kmail configured to prefer HTML to plain text
- Message preview enabled (besides the message list)
- HTML status bar enabled

# Steps to reproduce

0. Shut down Kontact, if it is running
1. Start Kontact
2. Click on a HTML email in the message list

# Expected result

The email is shown in HTML format in the message preview.

# Actual result

The plaintext view is used, even though I enabled to prefer HTML to plain text.

# Additional info

When I double click the email in the message list, the standalone message window opens and shows the email in HTML format (expected result). Then, when I close the standalone message window, click on another email in the message list, and then go back to the first one, HTML format is used (expected result). However, if I restart Kmail/Kontact, then again KMail ignores the "prefer HTML" setting.
Comment 7 Florian 2017-08-18 07:43:09 UTC
Created attachment 107343 [details]
Screenshot of the message preview and the standalone message window

Screenshot of the message preview and the standalone message window, both showing the same email. IN the message preview pane, the email is rendered in plaintext mode instead of HTML mode.
Comment 8 Florian 2017-08-18 07:51:07 UTC
Forgot to mention: I'm on OpenSUSE Tumbleweed:

S  | Name                    | Typ       | Version     | Arch   | Repository             
---+-------------------------+-----------+-------------+--------+------------------------
i+ | KMail                   | Anwendung |             | noarch | openSUSE-Tumbleweed-Oss
i+ | kmail                   | Paket     | 17.04.3-1.1 | x86_64 | openSUSE-Tumbleweed-Oss
i+ | kmail-account-wizard    | Paket     | 17.04.3-1.1 | x86_64 | openSUSE-Tumbleweed-Oss
i+ | kmail-application-icons | Paket     | 17.04.3-1.1 | x86_64 | openSUSE-Tumbleweed-Oss
i+ | kmailtransport          | Paket     | 17.04.3-1.1 | x86_64 | openSUSE-Tumbleweed-Oss
Comment 9 Laurent Montel 2018-10-31 06:56:36 UTC
Git commit cd4a66e69b3ef1f25eea3d1bd19c847d8f452fbc by Laurent Montel.
Committed on 31/10/2018 at 06:56.
Pushed by mlaurent into branch 'Applications/18.08'.

Fix Bug 377708 - KMail doesn't remember to render in HTML

FIXED-IN: 5.9.3

M  +5    -5    messageviewer/src/viewer/viewer_p.cpp

https://commits.kde.org/messagelib/cd4a66e69b3ef1f25eea3d1bd19c847d8f452fbc