Fix Bug 377708 - KMail doesn't remember to render in HTML

FIXED-IN: 5.9.3
BUG: 377708