messageviewer/src/viewer/viewer_p.cpp
@@ -1275,11 +1275,11 @@ void ViewerPrivate::resetStateForNewMessage()
             mLevelQuote = -1;
         }
     } else {
-        mDisplayFormatMessageOverwrite
-            = (mDisplayFormatMessageOverwrite
-               == MessageViewer::Viewer::UseGlobalSetting) ? MessageViewer::Viewer::UseGlobalSetting
-              :
-              MessageViewer::Viewer::Unknown;
+//        mDisplayFormatMessageOverwrite
+//            = (mDisplayFormatMessageOverwrite
+//               == MessageViewer::Viewer::UseGlobalSetting) ? MessageViewer::Viewer::UseGlobalSetting
+//              :
+//              MessageViewer::Viewer::Unknown;
     }
 }
 
